[gd_scene load_steps=3 format=3 uid="uid://dsjw2xtf4havm"]

[ext_resource type="Script" path="res://addons/questhounds/Components/quest_hounds_plugin_component.gd" id="1_ixjyv"]
[ext_resource type="PackedScene" uid="uid://bo0o3jkkvgqrq" path="res://addons/questhounds/Components/tree.tscn" id="2_neww1"]

[node name="QuestHoundsPluginComponent" type="Control"]
custom_minimum_size = Vector2(700, 700)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -52.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ixjyv")

[node name="Tree" parent="." instance=ExtResource("2_neww1")]
layout_mode = 1
offset_left = -411.0
offset_top = 108.0
offset_right = -69.0
offset_bottom = 283.0

[node name="QuestName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 82.0
offset_top = -275.0
offset_right = 179.0
offset_bottom = -249.0
grow_vertical = 2
text = "Quest Name"

[node name="Quest_name" type="TextEdit" parent="QuestName"]
layout_mode = 0
offset_top = 29.0
offset_right = 400.0
offset_bottom = 59.0
placeholder_text = "Please enter Quest Objectives"
scroll_fit_content_height = true

[node name="SideQuest" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 535.0
offset_top = -246.0
offset_right = 632.0
offset_bottom = -220.0
grow_vertical = 2
text = "Side Quest"

[node name="CheckButton" type="CheckButton" parent="SideQuest"]
layout_mode = 0
offset_left = 97.0
offset_right = 141.0
offset_bottom = 24.0

[node name="QuestDesc" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 82.0
offset_top = -199.0
offset_right = 221.0
offset_bottom = -173.0
grow_vertical = 2
text = "Quest Description"

[node name="Quest_desc" type="TextEdit" parent="QuestDesc"]
layout_mode = 0
offset_top = 36.0
offset_right = 400.0
offset_bottom = 151.0
placeholder_text = "Please enter Quest Description"
scroll_fit_content_height = true

[node name="QuestObjectives" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 83.0
offset_top = 25.0
offset_right = 222.0
offset_bottom = 51.0
grow_vertical = 2
text = "Quest Objectives
"

[node name="VBoxContainer" type="VBoxContainer" parent="QuestObjectives"]
layout_mode = 0
offset_left = 3.566
offset_top = 37.0
offset_right = 403.566
offset_bottom = 227.0

[node name="TextEdit" type="TextEdit" parent="QuestObjectives/VBoxContainer"]
layout_mode = 2
placeholder_text = "Please enter Quest Objectives"
scroll_fit_content_height = true

[node name="TextEdit2" type="TextEdit" parent="QuestObjectives/VBoxContainer"]
layout_mode = 2
placeholder_text = "Please enter Quest Objectives"
scroll_fit_content_height = true

[node name="TextEdit3" type="TextEdit" parent="QuestObjectives/VBoxContainer"]
layout_mode = 2
placeholder_text = "Please enter Quest Objectives"
scroll_fit_content_height = true

[node name="TextEdit4" type="TextEdit" parent="QuestObjectives/VBoxContainer"]
layout_mode = 2
placeholder_text = "Please enter Quest Objectives"
scroll_fit_content_height = true

[node name="TextEdit5" type="TextEdit" parent="QuestObjectives/VBoxContainer"]
layout_mode = 2
placeholder_text = "Please enter Quest Objectives"
scroll_fit_content_height = true

[node name="Save_File" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -235.0
offset_top = 142.5
offset_right = -75.0
offset_bottom = 193.5
grow_horizontal = 0
grow_vertical = 2
text = "SAVE TO FILE"

[node name="Save_quest" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -411.0
offset_top = 142.5
offset_right = -261.0
offset_bottom = 193.5
grow_horizontal = 0
grow_vertical = 2
text = "ADD NEW QUEST"

[node name="load_Data" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -595.0
offset_top = 144.0
offset_right = -445.0
offset_bottom = 195.0
grow_horizontal = 0
grow_vertical = 2
text = "LOAD QUESTS
"

[connection signal="pressed" from="Save_File" to="." method="_on_save_file_pressed"]
[connection signal="pressed" from="Save_quest" to="." method="_on_save_quest_pressed"]
[connection signal="pressed" from="load_Data" to="." method="_on_load_data_pressed"]
